# AutoSAD

./: README.md  quick_start.sh  requirements.txt  results_table.ipynb  run_scripts.py
AutoSAD/: __init__.py  autosad copy 2.py  autosad copy 3.py  autosad copy 4.py  autosad copy 5.py  autosad copy 6.py  autosad copy 7.py  autosad copy 8.py  autosad copy 9.py  autosad copy.py  autosad.py  autosad_bck.py
adbenchmark/: 48_chess.npz  49_kddcup99_prob.npz  50_bank.npz  51_kddcup99_u2r.npz
pysad_rust/: Cargo.toml
pysad_rust/src/: lib.rs
pysad_rust/src/models/: base_model.rs  hst.rs  iforest_asd.rs  loda.rs  mod.rs  oif.rs  oif_tree.rs  rrcf.rs  rshash.rs  xstream.rs
pysad_rust/src/utils/: evaluation.rs  mod.rs  ss.rs
scripts/: autosad_ablation_study.py  autosad_run copy.py  autosad_run.py  hst_run.py  ifasd_run.py  loda_run.py  oif_run.py  rrcf_run.py  rshash_run.py  utils.py  xstream_run.py
unshuffled_benchmark_results/: AutoSAD_10_cover_1.json  AutoSAD_10_cover_10.json  AutoSAD_10_cover_2.json  AutoSAD_10_cover_3.json  AutoSAD_10_cover_4.json  AutoSAD_10_cover_5.json  AutoSAD_10_cover_6.json  AutoSAD_10_cover_7.json  AutoSAD_10_cover_8.json  AutoSAD_10_cover_9.json  AutoSAD_11_donors_1.json  AutoSAD_11_donors_10.json  AutoSAD_11_donors_2.json  AutoSAD_11_donors_3.json  AutoSAD_11_donors_4.json  AutoSAD_11_donors_5.json  AutoSAD_11_donors_6.json  AutoSAD_11_donors_7.json  AutoSAD_11_donors_8.json  AutoSAD_11_donors_9.json  AutoSAD_13_fraud_1.json  AutoSAD_13_fraud_10.json  AutoSAD_13_fraud_2.json  AutoSAD_13_fraud_3.json  AutoSAD_13_fraud_4.json  (+934 more)
(+1 files in other folders)
